2009-07-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#121519 - A blank frame like windows is shown on the desktop
	                   (Turns out there were 2 bugs)
	* src/home/hd-render-manager.c: Ensure that calling set_loading_image
	  twice will not leave an otherwise unreferenced actor on the
	  stage. Minor refactoring to avoid code duplication.

	Fixes: NB#121519 - A blank frame like windows is shown on the desktop
	* src/home/hd-render-manager.c: Now only reparent to home if an actor
	  had a parent previously. If it didn't, it was almost certainly left
	  over after the MBWMCompMgrClutterClient was destroyed.

	More tweaks for MartinG
	* data/transitions.ini: Zoom the background less
	* src/launcher/hd-launcher-grid.c: Zoom out icons on the subview the
	  same amount as for the main view.	

2009-07-01  Aapo Kojo <aapo.kojo@nokia.com>

	Release 2.2.60

2009-07-01  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* debian/rules:
	  Disabled --enable-launcher until we sort out what to do with hail.
	* src/Makefile.am:
	  Reverted $(UNWANTED) filtering.
	  Clearly nobody understands what's libtool doing.

2009-07-01  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home.c: Fix minor bug that meant home panning wasn't
	  as responsive as it should have been.

2009-07-01  Aapo Kojo <aapo.kojo@nokia.com>

	Add maemo-launcher build dependency
	* debian/control:

2009-06-30  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Add maemo-launcher support and exports map. Initial patch by Dafydd Harries.
	Fixes: NB#101031

	* configure.ac:
	* debian/hildon-desktop.launcher:
	* debian/rules:
	* src/Makefile.am:
	* src/export.map:

2009-06-30  Gordon Williams <gordon.williams@collabora.co.uk>

	Speed improvements for TidyFingerScroll
	* src/tidy/tidy-finger-scroll.c: use clutter_set_motion_events_enabled
	  to stop clutter redrawing the screen for picking after every motion