@@ -1,3 +1,13 @@
+2009-07-02  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
+
+	Reinstated maemo-launcher support, this time with the correct exports so that
+	the a11y module can be loaded.
+	Fixes: NB#101031
+
+	* debian/rules:
+	* src/Makefile.am:
+	* src/export.map:
+
 2009-07-01  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Fixes: NB#121519 - A blank frame like windows is shown on the desktop
